# data-ef-api-docs

./: .env.example  .gitignore  AGENTS.md  README.md  datasets.7z  docker-compose.yml  find_similar_datasets.ipynb  pyproject.toml
artifacts/: README.md  all_datasets_20260408.csv  column_metadata.json  data_index.json  embed_checkpoint.json  metadata.json
artifacts/eval/: labeled_schema_pairs.json  schema_pairs.json  temporal_pairs.json
docs/: bulk-harvesting.md  client-reference.md  data-schemas.md  dataset-similarity-plan.md  index.md  models-reference.md  scripts-guide.md  semantic-search.md
scripts/: embed_datasets.py  events_news.py  fetch_all_datasets.py  fetch_categories.py  fetch_column_metadata.py  fetch_csv_datasets.py  fetch_organizations.py  find_dataset_similarity.py  find_similar_datasets.py  nearest_neighbors_by_dataset_id.py  public_datasets.py  search_datasets.py  standalone_fetch_column_metadata.py
scripts/eval/: generate_dataset_questions.py  generate_eval_sets.py  label_pairs_llm.py  run_eval.py
scripts/explore/: contact.py  explore_filters.py  realtime_api.py
scripts/harvest/: standalone_export_datasets.py
scripts/search/: embed_columns.py  embed_datasets.py  find_dataset_similarity.py  nearest_neighbors_by_dataset_id.py  search_datasets.py
src/data_ef_api/: __init__.py  client.py  constants.py
src/data_ef_api/models/: __init__.py  common.py  contact.py  enums.py  errors.py  events_news.py  public_datasets.py  realtime.py
tests/: test_client.py
